<resources>
    <string name="app_name">SmartApp</string>
    <string name="login_hint_phone">手机号</string>
    <string name="login_hint_psw">密码</string>
    <string name="login_button">登录</string>
    <string name="login_forget_psw">忘记密码?</string>
    <string name="login_third">第三方无需注册，直接登陆</string>
    <string name="activity_forget_pwd">忘记密码</string>
    <string name="title_activity_about">关于萌宝派</string>
    <string name="service_and_protocol">服务条款和协议</string>
    <string name="title_activity_grown_complain">成长值说明</string>
    <string name="title_activity_suggest">意见反馈</string>
    <string name="submit">提交</string>
    <string name="loading">正在加载...</string>
    <string name="requestailure">请求失败~</string>
    <string name="forget_button">提交</string>
    <string name="verify_button">下一步</string>
    <string name="activity_register">注册</string>
    <string name="home_more">更多</string>
    <string name="person_information">个人信息</string>

</resources>
