<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/global_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/shape_white_background_corner"
                android:orientation="horizontal"
                android:padding="@dimen/global_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/btn_phone_bg"
                    android:scaleType="fitCenter" />

                <EditText
                    android:id="@+id/et_login_phone"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:hint="@string/login_hint_phone"
                    android:inputType="phone"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.Smart.Body1" />

                <ImageView
                    android:id="@+id/iv_login_phone_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:background="@mipmap/btn_edit_delete"
                    android:scaleType="fitCenter"
                    android:visibility="invisible" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/shape_white_background_corner"
                android:orientation="horizontal"
                android:padding="@dimen/global_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/btn_password_bg"
                    android:scaleType="fitCenter" />

                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:hint="@string/login_hint_psw"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.Smart.Body1" />

                <ImageView
                    android:id="@+id/iv_login_pwd_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:background="@mipmap/btn_edit_delete"
                    android:scaleType="fitCenter"
                    android:visibility="invisible" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:background="@drawable/selector_primarycolor_to_white_button_corner"
                android:gravity="center"
                android:padding="@dimen/global_padding"
                android:text="@string/login_button"
                android:textAppearance="@style/TextAppearance.Smart.Button"
                android:textColor="@color/selector_white_to_primarycolor_text" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/global_padding"
                android:text="@string/login_forget_psw"
                android:textColor="@color/primaryColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="40dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dip"
                    android:layout_height="1px"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/login_third"
                    android:textAppearance="@style/TextAppearance.Smart.Body1" />

                <View
                    android:layout_width="0dip"
                    android:layout_height="1px"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dip">

                <ImageView
                    android:id="@+id/iv_login_wx"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/btn_wechat_login_bg" />

                <ImageView
                    android:id="@+id/iv_login_qq"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:layout_marginLeft="30dip"
                    android:layout_marginRight="30dip"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/btn_qq_login_bg" />

                <ImageView
                    android:id="@+id/iv_login_sina"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/btn_sina_login_bg" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
